--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pydantic-settings = "^2.5.0"
 fastapi = "^0.115.0"
 uvicorn = "^0.31.0"
 httpx = "^0.27.0"
+faker = "^40.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
