--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ fastapi = "^0.115.0"
 uvicorn = "^0.31.0"
 httpx = "^0.27.0"
 faker = "^40.1.2"
+dotenv = "^0.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
