--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ uvicorn = "^0.31.0"
 httpx = "^0.27.0"
 faker = "^40.1.2"
 dotenv = "^0.9.9"
+google-genai = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
