--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dotenv = "^0.9.9"
 google-genai = "^1.0.10"
 pyyaml = "^6.0"
 chromadb = ">=0.5.0,<1.0.0"
+posthog = ">=2.4.0,<4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
