--- a/config/providers.yaml
+++ b/config/providers.yaml
@@ -22,7 +22,7 @@ providers:
   openai:
     module: src.agents.providers.openai
     class: OpenAIProvider
-    default_model: gpt-4.1
+    default_model: gpt-4o-mini
     api_key_env: OPENAI_API_KEY
     ssl_client_type: httpx_openai
     constructor_ssl_kwarg: http_client
