--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ google-genai = "^1.0.10"
 pyyaml = "^6.0"
 chromadb = ">=0.5.0,<1.0.0"
 posthog = ">=2.4.0,<4.0.0"
+streamlit = "^1.40.0"
+tavily-python = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
