--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ posthog = ">=2.4.0,<4.0.0"
 streamlit = "^1.40.0"
 tavily-python = "^0.5.0"
 pymupdf = "^1.24.0"
+streamlit-agraph = "^0.0.45"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
