--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ streamlit = "^1.40.0"
 tavily-python = "^0.5.0"
 pymupdf = "^1.24.0"
 streamlit-agraph = "^0.0.45"
+beautifulsoup4 = "^4.12.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
